--- a/packages/storybook-html/stories/components/alert/alert.docs.mdx
+++ b/packages/storybook-html/stories/components/alert/alert.docs.mdx
@@ -24,7 +24,7 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### Info (Default example)
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--alert-info" />
 </Canvas>
 
@@ -41,7 +41,7 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### Success
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--alert-success" />
 </Canvas>
 
@@ -58,7 +58,7 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### Warning
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--alert-warning" />
 </Canvas>
 
@@ -75,7 +75,7 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### Error
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--alert-error" />
 </Canvas>
 
@@ -92,7 +92,7 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### with Link
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--alert-with-link" />
 </Canvas>
 
@@ -110,7 +110,7 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### with Button
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--alert-with-button" />
 </Canvas>
 
@@ -128,7 +128,7 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### with Title
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--alert-with-title" />
 </Canvas>
 
@@ -151,7 +151,7 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Info global
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--info-global" />
 </Canvas>
 
@@ -175,7 +175,7 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Success global
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--success-global" />
 </Canvas>
 
@@ -199,7 +199,7 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Warning global
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--warning-global" />
 </Canvas>
 
@@ -222,7 +222,7 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Error global
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--error-global" />
 </Canvas>
 
@@ -245,7 +245,7 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Info global (no title, no dismiss)
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--info-global-no-title-or-dismiss" />
 </Canvas>
 
@@ -269,7 +269,7 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Warning global (no title, no dismiss)
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--warning-global-no-title-or-dismiss" />
 </Canvas>
 
@@ -293,7 +293,7 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Loaded from an external API
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-alert--loaded-from-external-uri" />
 </Canvas>
 
