--- a/packages/storybook-html/stories/components/body/body-elements.docs.mdx
+++ b/packages/storybook-html/stories/components/body/body-elements.docs.mdx
@@ -8,43 +8,43 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 ## Title
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-body-elements--title" />
 </Canvas>
 
 ## Header
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-body-elements--header" />
 </Canvas>
 
 ## Text block
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-body-elements--text-block" />
 </Canvas>
 
 ## Unordered list (`<ul>`)
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-body-elements--unordered-list" />
 </Canvas>
 
 ## Ordered list (`<ol>`)
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-body-elements--ordered-list" />
 </Canvas>
 
 ## Definition list (`<dl>`)
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-body-elements--definition-list" />
 </Canvas>
 
 ## Horizontal rule (`<hr/>`)
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-body-elements--horizontal-rule" />
 </Canvas>
 
