--- a/packages/storybook-html/stories/components/card/card.docs.mdx
+++ b/packages/storybook-html/stories/components/card/card.docs.mdx
@@ -25,7 +25,7 @@ The height of the cards in a group all equalises by default.
 
 ### Default card
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--default-card" />
 </Canvas>
 
@@ -55,7 +55,7 @@ The height of the cards in a group all equalises by default.
 
 ### Default card with link or button
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--default-card-with-link" />
 </Canvas>
 
@@ -89,7 +89,7 @@ The height of the cards in a group all equalises by default.
 
 #### - Without image
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--default-card-no-image" />
 </Canvas>
 
@@ -99,7 +99,7 @@ The height of the cards in a group all equalises by default.
 
 #### - Without image, shaded
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--default-card-no-image-shaded" />
 </Canvas>
 
@@ -111,7 +111,7 @@ The height of the cards in a group all equalises by default.
 
 Button variants are restricted to purple and it's outline version.
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--default-card-no-image-button" />
 </Canvas>
 
@@ -129,7 +129,7 @@ Button variants are restricted to purple and it's outline version.
 
 #### - Without image, button, shaded
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--default-card-no-image-button-shaded" />
 </Canvas>
 
@@ -139,7 +139,7 @@ Button variants are restricted to purple and it's outline version.
 
 #### - With image
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--default-card-image" />
 </Canvas>
 
@@ -149,7 +149,7 @@ Button variants are restricted to purple and it's outline version.
 
 #### - With image, button
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--default-card-image-button" />
 </Canvas>
 
@@ -163,7 +163,7 @@ Button variants are restricted to purple and it's outline version.
 
 For story card, the sub-title is grey in colour, 16px, normal weight 400 and is placed above the card title.
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--story-card" />
 </Canvas>
 
@@ -196,7 +196,7 @@ For story card, the sub-title is grey in colour, 16px, normal weight 400 and is 
 
 For event card, the sub-title is purple-light in colour, 16px, medium weight 500 and is placed above the card title.
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--event-card" />
 </Canvas>
 
@@ -231,25 +231,25 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 
 #### - 1 col
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--default-card-1-col" />
 </Canvas>
 
 #### - 2 col
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--default-card-2-col" />
 </Canvas>
 
 #### - 3 col
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--default-card-3-col" />
 </Canvas>
 
 #### - 4 col
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--default-card-4-col" />
 </Canvas>
 
@@ -257,25 +257,25 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 
 #### - 1 col
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--story-card-1-col" />
 </Canvas>
 
 #### - 2 col
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--story-card-2-col" />
 </Canvas>
 
 #### - 3 col
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--story-card-3-col" />
 </Canvas>
 
 #### - 4 col
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--story-card-4-col" />
 </Canvas>
 
@@ -283,25 +283,25 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 
 #### - 1 col
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--event-card-1-col" />
 </Canvas>
 
 #### - 2 col
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--event-card-2-col" />
 </Canvas>
 
 #### - 3 col
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--event-card-3-col" />
 </Canvas>
 
 #### - 4 col
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-cards--event-card-4-col" />
 </Canvas>
 
