--- a/packages/storybook-html/stories/components/page-header/page-header.docs.mdx
+++ b/packages/storybook-html/stories/components/page-header/page-header.docs.mdx
@@ -10,7 +10,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 The Page header component is used to display the page title or the breadcrumbs or a combination of both.
 The default background color is set to light grey to distinguish it from the page contents.
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-page-header--page-header" />
 </Canvas>
 
