--- a/packages/storybook-html/stories/components/pagination/pagination.docs.mdx
+++ b/packages/storybook-html/stories/components/pagination/pagination.docs.mdx
@@ -4,13 +4,13 @@ import { Meta, Story, Canvas } from "@storybook/addon-docs";
 
 ### Pagination All
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-pagination--pagination" />
 </Canvas>
 
 ### Pagination First
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-pagination--pagination-first" />
 </Canvas>
 
@@ -55,7 +55,7 @@ import { Meta, Story, Canvas } from "@storybook/addon-docs";
 
 ### Pagination Middle
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-pagination--pagination-middle" />
 </Canvas>
 
@@ -109,7 +109,7 @@ import { Meta, Story, Canvas } from "@storybook/addon-docs";
 
 ### Pagination Last
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-pagination--pagination-last" />
 </Canvas>
 
