--- a/packages/storybook-html/stories/components/tabs/tabs.docs.mdx
+++ b/packages/storybook-html/stories/components/tabs/tabs.docs.mdx
@@ -23,7 +23,7 @@ hierarchical level.
 
 ### Default / Outline
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-tabs--tabs-outline" />
 </Canvas>
 
@@ -99,7 +99,7 @@ hierarchical level.
 
 ### Minimal
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-tabs--tabs-minimal" />
 </Canvas>
 
@@ -109,7 +109,7 @@ hierarchical level.
 
 ### Lined
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-tabs--tabs-lined" />
 </Canvas>
 
@@ -119,7 +119,7 @@ hierarchical level.
 
 ### With icon
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-tabs--tabs-with-icon" />
 </Canvas>
 
@@ -142,7 +142,7 @@ hierarchical level.
 
 ### Full width
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-tabs--tabs-full-width" />
 </Canvas>
 
@@ -152,7 +152,7 @@ hierarchical level.
 
 ### Small
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-tabs--tabs-small" />
 </Canvas>
 
@@ -162,7 +162,7 @@ hierarchical level.
 
 ### Reversed
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-tabs--tabs-reversed" />
 </Canvas>
 
