--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-1-live-data-indicator.docs.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-1-live-data-indicator.docs.mdx
@@ -7,12 +7,12 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 ## Default
 
-<Canvas withSource="open">
+<Canvas sourceState="shown">
   <Story id="deliverables-uq-maps-1-live-data-indicator--live-data-indicator" />
 </Canvas>
 
 ## Preset color variants
 
-<Canvas withSource="open">
+<Canvas sourceState="shown">
   <Story id="deliverables-uq-maps-1-live-data-indicator--live-data-indicator-variants" />
 </Canvas>
