--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-2-search-box.docs.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-2-search-box.docs.mdx
@@ -14,7 +14,7 @@ Enables the user to search for points of interest and categories.
 Use the HTML markup provided in the example below to apply the styles from the
 provided CSS.
 
-<Canvas withSource="open">
+<Canvas sourceState="shown">
   <Story height={120} id="deliverables-uq-maps-2-search-field--search-field" />
 </Canvas>
 
@@ -29,7 +29,7 @@ an origin or destination in wayfinding mode.
 Using the same HTML markup as above, also apply the `uq-maps__search-field--is-focused`
 class to the container.
 
-<Canvas withSource="open">
+<Canvas sourceState="shown">
   <Story
     height={200}
     id="deliverables-uq-maps-2-search-field--search-field-focused"
@@ -45,7 +45,7 @@ What the search field looks like when there has been text entered.
 Using the same HTML markup as above, except we're applying the `uq-maps__search-field--is-searching`
 class to the container instead.
 
-<Canvas withSource="open">
+<Canvas sourceState="shown">
   <Story
     height={120}
     id="deliverables-uq-maps-2-search-field--search-field-searching"
@@ -63,7 +63,7 @@ class to the container instead. We also have to add in some extra markup and
 scripted behaviour for the [_Material Design_][1] progress indicator. Please see
 example code.
 
-<Canvas withSource="open">
+<Canvas sourceState="shown">
   <Story
     height={120}
     id="deliverables-uq-maps-2-search-field--search-field-working"
