--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-3-wayfinding-controls.docs.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-3-wayfinding-controls.docs.mdx
@@ -15,7 +15,7 @@ location.
 Use the HTML markup provided in the example below to apply the styles from the
 provided CSS.
 
-<Canvas withSource="open" withToolbar>
+<Canvas sourceState="shown" withToolbar>
   <Story
     height={240}
     id="deliverables-uq-maps-3-wayfinding-controls--wayfinding-control"
@@ -31,7 +31,7 @@ class to the container instead. We also have to add in some extra markup and
 scripted behaviour for the [_Material Design_][1] progress indicator. Please see example
 code.
 
-<Canvas withSource="open" withToolbar>
+<Canvas sourceState="shown" withToolbar>
   <Story
     height={240}
     id="deliverables-uq-maps-3-wayfinding-controls--wayfinding-control-working"
