--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-4-search-combo.docs.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-4-search-combo.docs.mdx
@@ -14,7 +14,7 @@ Visually, it looks identical to a _search field_ by itself.
 
 ### Basic usage
 
-<Canvas withSource="open" withToolbar>
+<Canvas sourceState="shown" withToolbar>
   <Story height={100} id="deliverables-uq-maps-4-search-combo-menu--initial" />
 </Canvas>
 
@@ -31,7 +31,7 @@ Some POI and/or category items should be suggested before the user enters any
 text. The following example shows an alphabetical list of categories. However,
 we should show some data-driven POI's/categories instead.
 
-<Canvas withSource="open" withToolbar>
+<Canvas sourceState="shown" withToolbar>
   <Story height={800} id="deliverables-uq-maps-4-search-combo-menu--focused" />
 </Canvas>
 
@@ -39,7 +39,7 @@ we should show some data-driven POI's/categories instead.
 
 ### Basic usage
 
-<Canvas withSource="open" withToolbar>
+<Canvas sourceState="shown" withToolbar>
   <Story
     height={800}
     id="deliverables-uq-maps-4-search-combo-menu--searching"
@@ -50,7 +50,7 @@ we should show some data-driven POI's/categories instead.
 
 ### Basic usage
 
-<Canvas withSource="open" withToolbar>
+<Canvas sourceState="shown" withToolbar>
   <Story
     height={155}
     id="deliverables-uq-maps-4-search-combo-menu--searching-no-results"
@@ -61,7 +61,7 @@ we should show some data-driven POI's/categories instead.
 
 ### Basic usage
 
-<Canvas withSource="open" withToolbar>
+<Canvas sourceState="shown" withToolbar>
   <Story
     height={176}
     id="deliverables-uq-maps-4-search-combo-menu--searching-error"
@@ -76,7 +76,7 @@ list items.
 
 ### Basic usage
 
-<Canvas withSource="open" withToolbar>
+<Canvas sourceState="shown" withToolbar>
   <Story
     height={800}
     id="deliverables-uq-maps-4-search-combo-menu--searching-in-category"
