--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-5-slide-drawer.docs.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-5-slide-drawer.docs.mdx
@@ -12,6 +12,6 @@ this should be the entire screen.
 
 ### Basic usage
 
-<Canvas withSource="open" withToolbar>
+<Canvas sourceState="shown" withToolbar>
   <Story height={600} id="deliverables-uq-maps-5-slide-drawer--expanded" />
 </Canvas>
