--- a/packages/storybook-html/stories/patterns/form-validation/form-validation.story.mdx
+++ b/packages/storybook-html/stories/patterns/form-validation/form-validation.story.mdx
@@ -129,7 +129,7 @@ export const PasswordForm = () => {
   return passwordResetHTML;
 };
 
-<Canvas withSource="none" withToolbar>
+<Canvas sourceState="none" withToolbar>
   <Story
     name="Password form"
     inline={false}
