--- a/packages/storybook-html/stories/patterns/header-footer/basic-page.docs.mdx
+++ b/packages/storybook-html/stories/patterns/header-footer/basic-page.docs.mdx
@@ -5,6 +5,6 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 <StatusBadge.DraftDoc />
 
-<Canvas withSource="none" withToolbar>
+<Canvas sourceState="none" withToolbar>
   <Story height={1080} id="patterns-basic-page--basic-page" />
 </Canvas>
