--- a/packages/storybook-html/templates/component.docs.mdx
+++ b/packages/storybook-html/templates/component.docs.mdx
@@ -19,7 +19,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 <text />
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story height="100px" id="components-component-name--component-name" />
 </Canvas>
 
@@ -31,7 +31,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 <text />
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story height="100px" id="components-component-name--component-name" />
 </Canvas>
 
@@ -43,7 +43,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 <text />
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story height="100px" id="components-component-name--component-name" />
 </Canvas>
 
