--- a/packages/storybook-html/stories/components/footer-legacy/footer.docs.mdx
+++ b/packages/storybook-html/stories/components/footer-legacy/footer.docs.mdx
@@ -12,7 +12,7 @@ The global footer provides a consistent branding and navigational element across
 
 ## Default example
 
-<Canvas withSource="none" withToolbar>
+<Canvas sourceState="none" withToolbar>
   <Story height={339} id="legacy-footer--footer" />
 </Canvas>
 
