--- a/packages/storybook-html/stories/components/header-legacy/header.docs.mdx
+++ b/packages/storybook-html/stories/components/header-legacy/header.docs.mdx
@@ -21,7 +21,7 @@ using [_UQ Search_](https://www.uq.edu.au/search).
 > functionality within your application e.g. searching for a location on a map,
 > searching for books or articles in a library database.
 
-<Canvas withSource="none" withToolbar>
+<Canvas sourceState="none" withToolbar>
   <Story height={220} id="legacy-header--header-no-local-search" />
 </Canvas>
 
@@ -157,7 +157,7 @@ allow users to choose to search all UQ sites or just the content on your site\*.
 > \*If your application/website isn't indexed by UQ Search, please opt
 > to use the global header **with global search only**.
 
-<Canvas withSource="none" withToolbar>
+<Canvas sourceState="none" withToolbar>
   <Story height={220} id="legacy-header--header" />
 </Canvas>
 
