--- a/packages/storybook-html/stories/components/previous-next/previous-next.docs.mdx
+++ b/packages/storybook-html/stories/components/previous-next/previous-next.docs.mdx
@@ -26,7 +26,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 An instance when only the next button is visible
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-previous-next--previous-next-initial" />
 </Canvas>
 
@@ -51,7 +51,7 @@ An instance when only the next button is visible
 
 An instance when both the previous and next buttons are visible
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-previous-next--previous-next-middle" />
 </Canvas>
 
@@ -77,7 +77,7 @@ An instance when both the previous and next buttons are visible
 
 An instance when only the previous button is visible
 
-<Canvas withSource="none">
+<Canvas sourceState="none">
   <Story id="components-previous-next--previous-next-final" />
 </Canvas>
 
