--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-6-app-info.docs.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-6-app-info.docs.mdx
@@ -13,7 +13,7 @@ Implements the _slide drawer_ and _badge_ to display app info.
 
 #### Basic usage
 
-<Canvas withSource="open" withToolbar>
+<Canvas sourceState="shown" withToolbar>
   <Story height={400} id="deliverables-uq-maps-6-app-info-drawer--closed" />
 </Canvas>
 
@@ -21,6 +21,6 @@ Implements the _slide drawer_ and _badge_ to display app info.
 
 #### Basic usage
 
-<Canvas withSource="open" withToolbar>
+<Canvas sourceState="shown" withToolbar>
   <Story height={400} id="deliverables-uq-maps-6-app-info-drawer--open" />
 </Canvas>
