chore: fix format and qa feedback

--- a/packages/storybook-html/stories/components/hero-basic/hero-basic.docs.mdx
+++ b/packages/storybook-html/stories/components/hero-basic/hero-basic.docs.mdx
@@ -30,7 +30,11 @@ There are no size or colour variations for the basic hero component.
 ```html
 <div class="uq-hero-basic">
   <div class="uq-hero-basic__image">
-    <img src="/images/hero/hero-basic-example-1.jpg" alt="" role="presentation">
+    <img
+      src="/images/hero/hero-basic-example-1.jpg"
+      alt=""
+      role="presentation"
+    />
   </div>
   <div class="uq-container">
     <div class="uq-hero-basic__content">
@@ -40,7 +44,10 @@ There are no size or colour variations for the basic hero component.
       </h1>
       <div class="uq-hero-basic__back">
         <a href="#">
-          <span class="uq-icon uq-icon--common--chevron-left uq-icon--light"></span>Back link
+          <span
+            class="uq-icon uq-icon--common--chevron-left uq-icon--light"
+          ></span
+          >Back link
         </a>
       </div>
     </div>
