--- a/packages/storybook-html/stories/components/section/section.docs.mdx
+++ b/packages/storybook-html/stories/components/section/section.docs.mdx
@@ -16,8 +16,11 @@ panes and image panels.
 
 ### How-to
 
-Use the `.uq-section` element anywhere you need to provide a h2 heading and
+Use the `.uq-section` element to provide a h2 heading and
 description to introduce another set of components.
+
+Sections should be placed inside a `.uq-sections` element to provide uniform
+section spacing between each section.
 
 Implement the markup structure below for the header.
 
@@ -36,6 +39,35 @@ Implement the markup structure below for the header.
   <!-- Section content markup -->
 </div>
 ```
+
+### Shaded
+
+A section with a grey background.
+
+Modifier class: `.uq-section--shaded`
+
+<Canvas withSource="none">
+  <Story id="components-section--shaded" />
+</Canvas>
+
+### With container
+
+Sections can also implement a `.uq-container` element within their markup so the
+section can run edge-to-edge.
+
+<Canvas withSource="none">
+  <Story id="components-section--container" />
+</Canvas>
+
+### Shaded with container
+
+For shaded sections that go edge-to-edge.
+
+Modifier class: `.uq-section--shaded`
+
+<Canvas withSource="none">
+  <Story id="components-section--shaded-container" />
+</Canvas>
 
 ### Examples
 
