Setting up and debugging with workspaces

--- a/packages/storybook-html/stories/components/table/table.docs.mdx
+++ b/packages/storybook-html/stories/components/table/table.docs.mdx
@@ -439,4 +439,4 @@ Accessibility in tables can be acheived to an extend by following the considerat
   </table>
 </div>
 
-Reference: <https://www.w3.org/WAI/tutorials/tables/>
+Reference: [https://www.w3.org/WAI/tutorials/tables/](https://www.w3.org/WAI/tutorials/tables/)
