bug fixing storybook and config updates

--- a/packages/storybook-html/stories/components/core/browser-support.story.mdx
+++ b/packages/storybook-html/stories/components/core/browser-support.story.mdx
@@ -71,7 +71,7 @@ Refer to the following section for more detailed information on operating system
 
 ## Assessing individual site requirements
 
-If a solution requires significant backward compatibility, there should be discussion with the **ITS ADS UI** team and a review in the context of the application. You can request support from <webservices@uq.edu.au>.
+If a solution requires significant backward compatibility, there should be discussion with the **ITS ADS UI** team and a review in the context of the application. You can request support from [webservices@uq.edu.au](mailto:webservices@uq.edu.au).
 
 ### Modifying browser behaviour
 
@@ -316,7 +316,7 @@ Analytics: https://uq.edu.au | 01 Mar 2016 - 07 Mar 2017 (Sessions)
 
 ### Additional notes
 
-Microsoft will end technical support and security updates for older versions of Internet Explorer
-http://www.news.com.au/technology/online/security/microsoft-will-end-technical-support-and-security-updates-for-older-versions-of-internet-explorer/news-story/52896819a4236fa5f8b00de0f508527d
+Microsoft will end technical support and security updates for older versions of Internet Explorer 
+[http://www.news.com.au/technology/online/security/microsoft-will-end-technical-support-and-security-updates-for-older-versions-of-internet-explorer/news-story/52896819a4236fa5f8b00de0f508527d](http://www.news.com.au/technology/online/security/microsoft-will-end-technical-support-and-security-updates-for-older-versions-of-internet-explorer/news-story/52896819a4236fa5f8b00de0f508527d)
 
 Microsoft has provided Enterprise Mode for IE 11 to allow users to run the browser in compatibility mode when they visit a site that works with older versions of IE. It is also possible to give users the ability to enable Enterprise Mode from the Tools menu in the browser.
