--- a/packages/storybook-html/stories/components/core/date.story.mdx
+++ b/packages/storybook-html/stories/components/core/date.story.mdx
@@ -147,7 +147,7 @@ These date formats are designed for
       <td>When listing the time zone, drop the leading 0 for single digits.</td>
     </tr>
   </tbody>
-</table>{" "}
+</table>
 
 ## Using human and relative language and approximate time
 
@@ -194,17 +194,13 @@ Relative language may not always be appropriate, e.g. current date in a clock ap
       <td>
         If absolute time isn’t necessary for specificity or comparison, display
         approximate relative times. <br />
-        <strong>
-          Don’t combine units (e.g. “1 hour 32 minutes ago”). Instead, round
-          down to the most recent largest unit (e.g. “1 hour ago”)
-        </strong>.<strong>
-          Don’t display relative time which exceeds more than 1 week
-        </strong>.
+        <strong>Don’t combine units (e.g. “1 hour 32 minutes ago”). Instead, round
+          down to the most recent largest unit (e.g. “1 hour ago”)</strong>.
+        <strong>Don’t display relative time which exceeds more than 1 week</strong>.
       </td>
     </tr>
   </tbody>
-</table>{" "}
-
+</table>
 ## Be modular
 
 Depending on the context, show either date or time, or both date and time.
@@ -323,11 +319,11 @@ Depending on the context, show either date or time, or both date and time.
       <td>
         If real estate is limited (such as with timestamps, labels on graphs,
         durations, etc.) abbreviate units, using numerical versions and/or by
-        removing the “:00”:{" "}
+        removing the “:00”:
       </td>
     </tr>
   </tbody>
-</table>{" "}
+</table>
 
 ## Some examples
 
