--- a/packages/storybook-html/stories/docs/introduction/get-started.story.mdx
+++ b/packages/storybook-html/stories/docs/introduction/get-started.story.mdx
@@ -11,7 +11,7 @@ import { Meta, Story, Canvas } from "@storybook/addon-docs";
     <p>
       <strong>
         The Design system is in active use in current projects at UQ.
-      </strong>{" "}
+      </strong>
       Our NPM packages are currently restricted to ITS-ADS staff with AWS tools
       access. If you have access, please refer to the{" "}
       <a href="https://confluence.its.uq.edu.au/confluence/x/0DwDCw">
