fix: remove all  nad replace with purple-500

--- a/packages/storybook-html/stories/components/core/typography.story.mdx
+++ b/packages/storybook-html/stories/components/core/typography.story.mdx
@@ -180,7 +180,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xxxxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td> 
-      <td className="uqds-table__item" data-title="Colour:">$purple</td>
+      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
       <td className="uqds-table__item" data-title="Example"><h1>This is a H1 heading</h1></td> 
     </tr>
     <tr className="uqds-table__row">
@@ -189,7 +189,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xxxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$purple</td>
+      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
       <td className="uqds-table__item" data-title="Example"><h2>This is a H2 heading</h2></td> 
     </tr>
     <tr className="uqds-table__row">
@@ -198,7 +198,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$purple</td>
+      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
       <td className="uqds-table__item" data-title="Example"><h3>This is a H3 heading</h3></td> 
     </tr>
     <tr className="uqds-table__row">
@@ -207,7 +207,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$purple</td>
+      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
       <td className="uqds-table__item" data-title="Example"><h4>This is a H4 heading</h4></td> 
     </tr>
     <tr className="uqds-table__row">
@@ -216,7 +216,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$purple</td>
+      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
       <td className="uqds-table__item" data-title="Example"><h5>This is a H5 heading</h5></td> 
     </tr>
     <tr className="uqds-table__row">
@@ -225,7 +225,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$purple</td>
+      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
       <td className="uqds-table__item" data-title="Example"><h6>This is a H6 heading</h6></td> 
     </tr>
     <tr className="uqds-table__row">
