fix: remove green colour shorthand and replaced with success-500

--- a/packages/storybook-html/stories/components/icon/icon.docs.mdx
+++ b/packages/storybook-html/stories/components/icon/icon.docs.mdx
@@ -104,7 +104,7 @@ Here's an example using the `$color` parameter.
 
 .your-class {
   ...
-  background-image: url(icon-constants.get-icon("agriculture-and-environment--agriculture-machine-tractor", core.$green));
+  background-image: url(icon-constants.get-icon("agriculture-and-environment--agriculture-machine-tractor", core.$success-500));
   ...
 }
 ```
