Cleaning up files

--- a/packages/storybook-html/stories/components/button/button.mdx
+++ b/packages/storybook-html/stories/components/button/button.mdx
@@ -28,7 +28,7 @@ The button component is used to navigate to a web link or to an anchor name tag 
 Primary buttons are used for primary actions on a webpage. For example, submit button on a form or other critical actions in a user workflow.
 It should only appear once on a webpage.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-button--primary" />
 </Canvas>
 
@@ -44,7 +44,7 @@ It should only appear once on a webpage.
 
 Secondary button is used to highlight important actions. For example, save button on a form.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-button--secondary" />
 </Canvas>
 
@@ -60,7 +60,7 @@ Secondary button is used to highlight important actions. For example, save butto
 
 Secondary-light button variant is used on dark backgrounds.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story height="70px" id="components-button--secondary-light" />
 </Canvas>
 
@@ -79,7 +79,7 @@ Secondary-light button variant is used on dark backgrounds.
 
 Purple button uses UQ's brand primary color, purple. It needs to be used sparingly.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-button--purple" />
 </Canvas>
 
@@ -93,7 +93,7 @@ Purple button uses UQ's brand primary color, purple. It needs to be used sparing
 
 The button sizes are normal, tiny `uq-button--tiny`, small `uq-button--small` and large `uq-button--large`
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-button--size" />
 </Canvas>
 
@@ -119,7 +119,7 @@ The button sizes are normal, tiny `uq-button--tiny`, small `uq-button--small` an
 
 Expand variant of the button `uq-button--expand` would extend the width of the button to full width of its parent container.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-button--expand" />
 </Canvas>
 
