--- a/packages/storybook-html/stories/components/hero/hero.mdx
+++ b/packages/storybook-html/stories/components/hero/hero.mdx
@@ -10,7 +10,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 ### Default hero
 
-<Canvas withSource="none" withToolbar>
+<Canvas sourceState="hidden" withToolbar>
   <Story id="components-hero--default-hero" height={300} />
 </Canvas>
 
@@ -26,7 +26,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 ### Feature image hero
 
-<Canvas withSource="none" withToolbar>
+<Canvas sourceState="hidden" withToolbar>
   <Story id="components-hero--feature-hero" height={505} />
 </Canvas>
 
@@ -60,7 +60,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 ### Large variant
 
-<Canvas withSource="none" withToolbar>
+<Canvas sourceState="hidden" withToolbar>
   <Story id="components-hero--large-hero" height={600} />
 </Canvas>
 
