--- a/packages/storybook-html/stories/components/loading-spinner/loading-spinner.mdx
+++ b/packages/storybook-html/stories/components/loading-spinner/loading-spinner.mdx
@@ -22,7 +22,7 @@ The loading spinner component is a progress indicator used to provide feedback t
 
 The default component is UQ purple for use on light backgrounds such as white or light-grey.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-loading-spinner--loading-spinner" />
 </Canvas>
 
@@ -40,7 +40,7 @@ The variants can be used in isolation or combined. For example if you would like
 
 Changes the colour of the component to white so it can be used on darker backgrounds such as UQ purple.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-loading-spinner--loading-spinner-light" />
 </Canvas>
 
@@ -58,7 +58,7 @@ Changes the colour of the component to white so it can be used on darker backgro
 
 Reduces the component to half the size of the default.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-loading-spinner--loading-spinner-small" />
 </Canvas>
 
