--- a/packages/storybook-html/stories/components/pagination/pagination.mdx
+++ b/packages/storybook-html/stories/components/pagination/pagination.mdx
@@ -17,19 +17,19 @@ If the component is displaying the last page, the links 'last' and 'next' are re
 
 ### Pagination first
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-pagination--pagination-first" />
 </Canvas>
 
 ### Pagination middle
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-pagination--pagination-middle" />
 </Canvas>
 
 ### Pagination last
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-pagination--pagination-last" />
 </Canvas>
 
