--- a/packages/storybook-html/stories/components/progression/progression.mdx
+++ b/packages/storybook-html/stories/components/progression/progression.mdx
@@ -24,7 +24,7 @@ The Progression component is a progress indicator helping the user to complete a
 
 In the initial instance, the component is in it's starting default stage.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-progression--progression-initial" />
 </Canvas>
 
@@ -47,7 +47,7 @@ In the initial instance, the component is in it's starting default stage.
 
 An instance when a step is done partly but not completed.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-progression--progression-middle" />
 </Canvas>
 
@@ -85,7 +85,7 @@ An instance when a step is done partly but not completed.
 
 The instance when all steps are done and completed.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-progression--progression-final" />
 </Canvas>
 
