--- a/packages/storybook-html/stories/components/side-nav/side-nav.mdx
+++ b/packages/storybook-html/stories/components/side-nav/side-nav.mdx
@@ -14,7 +14,7 @@ A vertical list of links for site navigation typically placed next to the body c
 
 ### Single-level
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-side-nav--side-nav-single-level" />
 </Canvas>
 
@@ -45,7 +45,7 @@ A vertical list of links for site navigation typically placed next to the body c
 
 ### Multi-level
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="components-side-nav--side-nav-multi-level" />
 </Canvas>
 
