--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.mdx
@@ -18,7 +18,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 Breadcrumbs are a horizontal list of links used to indicate the current page location within the information architecture (the first level always being the UQ homepage). Page links are separated by a chevron icon which indicates the level of that page relative to the page links beside it. Breadcrumbs are truncated and ellipsed (...) when the text is longer than a set width, however the current page crumb is not linked and always listed in full. UQ homepage is the base.
 
-<Canvas withSource="none" withToolbar>
+<Canvas sourceState="hidden" withToolbar>
   <Story id="components-breadcrumb--breadcrumb" />
 </Canvas>
 
