--- a/packages/storybook-html/stories/components/sections/sections.mdx
+++ b/packages/storybook-html/stories/components/sections/sections.mdx
@@ -14,7 +14,7 @@ Sections are a layout style that wrap content in a white or grey background with
 
 The default section displays left-aligned content, medium top and bottom padding, on a white background contained to the page width.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="layout-sections--sections-default" />
 </Canvas>
 
@@ -39,7 +39,7 @@ The variants can be used in isolation or combined. For example if you would like
 
 Add class `uq-section--centered` to centre-align the content.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="layout-sections--sections-centered" />
 </Canvas>
 
@@ -60,7 +60,7 @@ Add class `uq-section--centered` to centre-align the content.
 
 Add class `uq-section--narrow` to contain the content to a narrow container.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="layout-sections--sections-narrow" />
 </Canvas>
 
@@ -81,7 +81,7 @@ Add class `uq-section--narrow` to contain the content to a narrow container.
 
 Add class `uq-section--shaded` to apply a light-grey background to the section.
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="layout-sections--sections-shaded" />
 </Canvas>
 
@@ -114,7 +114,7 @@ Default sections have medium top and bottom padding. The following variants prov
 
 #### No padding
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="layout-sections--sections-no-padding" />
 </Canvas>
 
@@ -136,7 +136,7 @@ Default sections have medium top and bottom padding. The following variants prov
 
 #### Large padding
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story id="layout-sections--sections-large-padding" />
 </Canvas>
 
