--- a/packages/storybook-html/templates/component.mdx
+++ b/packages/storybook-html/templates/component.mdx
@@ -25,7 +25,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 <text>
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story height="100px" id="components-component-name--component-name" />
 </Canvas>
 
@@ -37,7 +37,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 <text>
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story height="100px" id="components-component-name--component-name" />
 </Canvas>
 
@@ -49,7 +49,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 <text>
 
-<Canvas withSource="none">
+<Canvas sourceState="hidden">
   <Story height="100px" id="components-component-name--component-name" />
 </Canvas>
 
