--- a/packages/storybook-html/stories/components/body/body-utilities.mdx
+++ b/packages/storybook-html/stories/components/body/body-utilities.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from "@storybook/addon-docs";
+import { Meta, Story} from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 # Body utility classes
@@ -50,9 +50,7 @@ Coming soon
 
 <Story id="components-body-utilities--visibility-utils" />
 
-<>
   <br />
-</>
 
 ### Print visibility
 
