--- a/packages/storybook-html/stories/components/core/browser-support.mdx
+++ b/packages/storybook-html/stories/components/core/browser-support.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from "@storybook/addon-docs";
+import { Meta, Story, Preview } from '@storybook/blocks';
 
 <Meta title="Core/Standards/Browser support" />
 
