--- a/packages/storybook-html/stories/components/core/typography.mdx
+++ b/packages/storybook-html/stories/components/core/typography.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas, Preview } from "@storybook/addon-docs";
+import { Meta, Story, Canvas, Preview } from '@storybook/blocks';
 import "./_typography.scss";
 
 <Meta title="Core/Typography" />
@@ -9,7 +9,6 @@ import "./_typography.scss";
 
 The following fonts are used for UQ online applications:
 
-export const Fonts = () => `
 <table className="uqds-table uqds-table--card uqds-fonts">
   <thead>
     <tr>
@@ -36,9 +35,6 @@ export const Fonts = () => `
     </tr>
   </tbody>
 </table>
-`;
-
-<Story name="Fonts">{Fonts.bind({})}</Story>
 
 ### Loading fonts
 
@@ -95,7 +91,6 @@ When platforms and systems such as third party applications are not able to disp
 
 We use 16px as the base font size and use it to calculate the other font sizes.
 
-export const Sizes = () => `
 <table className="uqds-table uqds-table--card">
   <thead>
     <tr>
@@ -152,15 +147,11 @@ export const Sizes = () => `
     </tr>
   </tbody>
 </table>
-`;
-
-<Story name="Sizes">{Sizes.bind({})}</Story>
 
 ## Styles
 
 The following typography styles are setup in HTML elements and components. Please reference the styles below when configuring new websites and components. For detailed documentation about writing style at UQ, reference the <a href="https://marketing-communication.uq.edu.au/written-style-guide" target="_blank" rel="nofollow noopener noreferrer" class="sbdocs sbdocs-a css-19nbuh3">written style guide</a>.
 
-export const Styles = () => `
 <table className="uqds-table uqds-table--card">
   <thead>
     <tr className="uqds-table__mobile-heading">
@@ -311,6 +302,3 @@ export const Styles = () => `
     </tr>
   </tbody>
 </table>
-`;
-
-<Story name="Styles">{Styles.bind({})}</Story>
