--- a/packages/storybook-html/stories/components/grid-menu/grid-menu.mdx
+++ b/packages/storybook-html/stories/components/grid-menu/grid-menu.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story } from "@storybook/addon-docs";
+import { Meta, Story } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 # Grid menu
