--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-intro.story.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-intro.story.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from "@storybook/addon-docs";
+import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 <Meta title="Deliverables/UQ Maps/Overview" />
