--- a/packages/storybook-html/stories/docs/layout/layout.mdx
+++ b/packages/storybook-html/stories/docs/layout/layout.mdx
@@ -1,5 +1,5 @@
 import "./layout.scss";
-import { Meta, Story } from "@storybook/addon-docs";
+import { Meta, Story } from '@storybook/blocks';
 
 <Meta
   title="Layout/Layout system"
