--- a/packages/storybook-html/stories/patterns/form-validation/form-validation.mdx
+++ b/packages/storybook-html/stories/patterns/form-validation/form-validation.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from "@storybook/addon-docs";
+import { Meta, Story, Canvas } from '@storybook/blocks';
 import { useEffect } from "@storybook/addons";
 import baddestForm from "./form-errors-kitchen-sink.html";
 import passwordResetHTML from "./examples/password-reset.html";
